tests/baselines/reference/invalidDoWhileBreakStatements.errors.txt
invalidDoWhileBreakStatements.ts(4,1): error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.
invalidDoWhileBreakStatements.ts(8,4): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
invalidDoWhileBreakStatements.ts(14,9): error TS18055: Label 'TWO' used before declaration
invalidDoWhileBreakStatements.ts(21,9): error TS18055: Label 'THREE' used before declaration
invalidDoWhileBreakStatements.ts(27,5): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
invalidDoWhileBreakStatements.ts(37,5): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.


==== invalidDoWhileBreakStatements.ts (6 errors) ====
    // All errors
    
    // naked break not allowed
    break;
    ~~~~~~
!!! error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.
    
    // non-existent label
    ONE:
    do break TWO; while (true)
       ~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
    
    // break from inside function
    TWO:
    do {
        var x = () => {
            break TWO;
            ~~~~~~~~~~
!!! error TS18055: Label 'TWO' used before declaration
        }
    }while (true)
    
    THREE:
    do {
        var fn = function () {
            break THREE;
            ~~~~~~~~~~~~
!!! error TS18055: Label 'THREE' used before declaration
        }
    }while (true)
    
    // break forward
    do {
        break FIVE;
        ~~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
        FIVE:
        do { } while (true)
    }while (true)
    
    // label on non-loop statement
    NINE:
    var y = 12;
    
    do {
        break NINE;
        ~~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
    }while (true)